--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   },
   "homepage": "https://github.com/SanDiegoHanbitChurch/video-list-service#readme",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "koa": "^2.3.0",
     "koa-router": "^7.2.1",
     "ramda": "^0.24.1",
+    "redis": "^2.7.1",
     "youtube-node": "^1.3.2"
   },
   "devDependencies": {
-    "jest": "^20.0.4"
+    "jest": "^20.0.4",
+    "sinon": "^2.3.7"
   }
 }
